--- a/footer.css
+++ b/footer.css
@@ -1,25 +1,27 @@
 a {
-  color: #000;
-  text-decoration: none;
-}
-.pg-footer {
-  font-family: 'Roboto', sans-serif;
+    color: #000;
+    text-decoration: none;
 }
 
+.pg-footer {
+    font-family: 'Roboto', sans-serif;
+}
 
 .footer {
-    background-color: #004658;
+    background-color: #51a95f;
     /* background-color: #484848; */
     color: #fff;
 }
+
 .footer-wave-svg {
-    background-color: transparent;
+    background-color: #51a95f;
     display: block;
     height: 30px;
     position: relative;
     top: -1px;
     width: 100%;
 }
+
 .footer-wave-path {
     fill: #fffff2;
 }
@@ -42,13 +44,14 @@ a {
 }
 
 .footer-content-column ul li a {
-  color: #fff;
-  text-decoration: none;
+    color: #fff;
+    text-decoration: none;
 }
 
 .footer-logo-link {
     display: inline-block;
 }
+
 .footer-menu {
     margin-top: 30px;
 }
@@ -63,12 +66,14 @@ a {
     margin-top: 0;
     text-transform: uppercase;
 }
+
 .footer-menu-list {
     list-style: none;
     margin-bottom: 0;
     margin-top: 10px;
     padding-left: 0;
 }
+
 .footer-menu-list li {
     margin-top: 5px;
 }
@@ -78,15 +83,18 @@ a {
     margin-top: 10px;
     margin-bottom: 20px;
 }
+
 .footer-call-to-action-button:hover {
     background-color: #fffff2;
     color: #00bef0;
 }
+
 .button:last-of-type {
     margin-right: 0;
 }
+
 .footer-call-to-action-button {
-    background-color: #027b9a;
+    background-color: #83db8d;
     border-radius: 21px;
     color: #fffff2;
     display: inline-block;
@@ -102,9 +110,11 @@ a {
     cursor: pointer;
     position: relative;
 }
+
 .footer-call-to-action {
     margin-top: 30px;
 }
+
 .footer-call-to-action-title {
     color: #fffff2;
     font-size: 14px;
@@ -115,20 +125,18 @@ a {
     margin-top: 0;
     text-transform: uppercase;
 }
+
 .footer-call-to-action-link-wrapper {
     margin-bottom: 0;
     margin-top: 10px;
     color: #fff;
     text-decoration: none;
 }
+
 .footer-call-to-action-link-wrapper a {
     color: #fff;
     text-decoration: none;
 }
-
-
-
-
 
 .footer-social-links {
     bottom: 0;
@@ -148,7 +156,7 @@ a {
 }
 
 .footer-social-amoeba-path {
-    fill: #027b9a;
+    fill: #83db8d;
 }
 
 .footer-social-link.linkedin {
@@ -167,7 +175,7 @@ a {
 .hidden-link-text {
     position: absolute;
     clip: rect(1px 1px 1px 1px);
-    clip: rect(1px,1px,1px,1px);
+    clip: rect(1px, 1px, 1px, 1px);
     -webkit-clip-path: inset(0px 0px 99.9% 99.9%);
     clip-path: inset(0px 0px 99.9% 99.9%);
     overflow: hidden;
@@ -185,6 +193,7 @@ a {
 .footer-social-icon-path {
     fill: #fffff2;
     transition: fill .2s;
+    display: none;
 }
 
 .footer-social-link.twitter {
@@ -209,10 +218,10 @@ a {
 }
 
 .footer-copyright {
-    background-color: #027b9a;
+    background-color: #83db8d;
     color: #fff;
     padding: 15px 30px;
-  text-align: center;
+    text-align: center;
 }
 
 .footer-copyright-wrapper {
@@ -222,7 +231,7 @@ a {
 }
 
 .footer-copyright-text {
-  color: #fff;
+    color: #fff;
     font-size: 13px;
     font-weight: 400;
     line-height: 18px;
@@ -236,71 +245,71 @@ a {
 }
 
 
-
-
-
-
-
 /* Media Query For different screens */
-@media (min-width:320px) and (max-width:479px)  { /* smartphones, portrait iPhone, portrait 480x320 phones (Android) */
-  .footer-content {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 1230px;
-    padding: 40px 15px 1050px;
-    position: relative;
-  }
-}
-@media (min-width:480px) and (max-width:599px)  { /* smartphones, Android phones, landscape iPhone */
-  .footer-content {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 1230px;
-    padding: 40px 15px 1050px;
-    position: relative;
-  }
-}
-@media (min-width:600px) and (max-width: 800px)  { /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
-  .footer-content {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 1230px;
-    padding: 40px 15px 1050px;
-    position: relative;
-  }
-}
-@media (min-width:801px)  { /* tablet, landscape iPad, lo-res laptops ands desktops */
 
-}
-@media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */
-
-}
-@media (min-width:1281px) { /* hi-res laptops and desktops */
-
+@media (min-width:320px) and (max-width:479px) {
+    /* smartphones, portrait iPhone, portrait 480x320 phones (Android) */
+    .footer-content {
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 1230px;
+        padding: 40px 15px 1050px;
+        position: relative;
+    }
 }
 
+@media (min-width:480px) and (max-width:599px) {
+    /* smartphones, Android phones, landscape iPhone */
+    .footer-content {
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 1230px;
+        padding: 40px 15px 1050px;
+        position: relative;
+    }
+}
 
+@media (min-width:600px) and (max-width: 800px) {
+    /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
+    .footer-content {
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 1230px;
+        padding: 40px 15px 1050px;
+        position: relative;
+    }
+}
 
+@media (min-width:801px) {
+    /* tablet, landscape iPad, lo-res laptops ands desktops */
+}
+
+@media (min-width:1025px) {
+    /* big landscape tablets, laptops, and desktops */
+}
+
+@media (min-width:1281px) {
+    /* hi-res laptops and desktops */
+}
 
 @media (min-width: 760px) {
-  .footer-content {
-      margin-left: auto;
-      margin-right: auto;
-      max-width: 1230px;
-      padding: 40px 15px 450px;
-      position: relative;
-  }
-
-  .footer-wave-svg {
-      height: 50px;
-  }
-
-  .footer-content-column {
-      width: 24.99%;
-  }
+    .footer-content {
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 1230px;
+        padding: 40px 15px 450px;
+        position: relative;
+    }
+    .footer-wave-svg {
+        height: 50px;
+    }
+    .footer-content-column {
+        width: 24.99%;
+    }
 }
+
 @media (min-width: 568px) {
-  /* .footer-content-column {
+    /* .footer-content-column {
       width: 49.99%;
   } */
 }
